# forecasting-electricity

./: .dockerignore  Dockerfile  README.md  descriptives.ipynb  pyproject.toml
nanogpt/: bigram.py  dev.ipynb  transformer.py
