[tool.poetry]
name = "power-forecasting"
version = "0.1.0"
description = "A comparison of models to forecast different parts of the power markets."
authors = ["David P. Kroon <dpkroon@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
